--- a/pm-cv.tex
+++ b/pm-cv.tex
@@ -23,13 +23,13 @@
 \end{center}
 
 \begin{wrapfigure}{r}{0.25\textwidth} 
-	\includegraphics[width=0.27\textwidth]{my_pic.jpeg}
+	\includegraphics[width=0.25\textwidth]{my_pic.jpeg}
 \end{wrapfigure}
 
 \textbf{\large PERSONAL INFORMATIONS}\\
 \color{my_col}\noindent\rule{10cm}{0.8pt}\color{black}\\ \\
 Names:  \textbf{\emph{Predrag MITIC}} \\
-Adress: \emph{Vlase bb, Leskovac, Serbia }\\
+Address: \emph{Vlase bb, Leskovac, Serbia }\\
 Tel: 	(+381) 61 18 56 816 \\
 Email	predrag98mitic@gmail.com \\ 
 Web:	\url{www.alas.matf.bg.ac.rs/~mi17116} \\
@@ -138,8 +138,10 @@ My projects can be seen on my Github profile \\
 %\textbf{\large REFRERENCIS}\\
 %\color{my_col}\noindent\rule{15.4cm}{0.6pt}\color{black}\\ 
 
-\color{my_col}\noindent\rule{15.4cm}{0.6pt}\color{black}\\
-\textbf{\large Belgrade, 31/12/2019}\\
+\color{my_col}\noindent\rule{15.4cm}{0.6pt}\color{black}
+\begin{flushright}
+	\small Belgrade, 31/12/2019
+\end{flushright}
 
 
 
