--- a/pm-cv.tex
+++ b/pm-cv.tex
@@ -28,7 +28,7 @@
 
 \textbf{\large PERSONAL INFORMATIONS}\\
 \color{my_col}\noindent\rule{10cm}{0.8pt}\color{black}\\ \\
-Names:  \textbf{\emph{Predrag MITIC}} \\
+Name:  \textbf{\emph{Predrag MITIC}} \\
 Address: \emph{Vlase bb, Leskovac, Serbia }\\
 Tel: 	(+381) 61 18 56 816 \\
 Email	predrag98mitic@gmail.com \\ 
@@ -38,9 +38,9 @@ Date of Birth: 1/09/1998 \\ \\
 
 \textbf{\large PERSONAL PROFILE}\\
 \color{my_col}\noindent\rule{15.4cm}{0.6pt}\color{black}\\ 
-Ambitious and highly motivated third year student at Faculty of Matematics, 
-University of Belgrade. With practical experiance in Computer Graphics and 
-C/C++ programming language. Team player, quick learner, open to new ideas and experiances.\\
+Ambitious and highly motivated third year student at Faculty of Mathematics, 
+University of Belgrade. With practical experience in Computer Graphics and 
+C/C++ programming languages. Team player, quick learner, open to new ideas and experiences.\\
 
 \textbf{\large KEY SKILLS AND ACHIVEMENTS}\\
 \color{my_col}\noindent\rule{15.4cm}{0.6pt}\color{black}
@@ -48,11 +48,11 @@ C/C++ programming language. Team player, quick learner, open to new ideas and ex
 \begin{itemize}
   \item Good at solving algorithm problems
   \item Extensive knowledge of programing and programming languages 
-  (C/C++, Java, Python, JavaScript, SQL, R, MATHLAB)
+  (C/C++, Java, Python, JavaScript, SQL, R, MATLAB)
   \item Good knowledge of text markup languages (HTML/CSS, LaTeX)
   \item Competent user of Microsoft Office, Autodesk softwre, 
   Linux OS and Microsoft Windows OS
-  \item Excellent in 3D and 2D graphics 
+  \item Excellent at 3D and 2D graphics 
   \item Languages:
 	\begin{itemize}	\small
 		\item Serbian - Native
@@ -75,14 +75,14 @@ C/C++ programming language. Team player, quick learner, open to new ideas and ex
 \textbf{\large EDUCATION}\\
 \color{my_col}\noindent\rule{15.4cm}{0.6pt}\color{black}
 \begin{description}
-    \item[ 2017-2021 : Bachelor of Informatics ]\hfill \\
+    \item[ 2017-present : Bachelor of Informatics ]\hfill \\
     \textbf{\textit{Faculty of Mathematics, University of Belgrade}}\\
     \normalsize \\
-    Subjects stuied :
+    Subjects studied :
      \begin{multicols}{2}
     \begin{itemize}
     \item Programming
-    \item Computer Architecutre
+    \item Computer Architecture
     \item Algorithms and Data structures
     \item Operating Systems
     \item Database Systems
@@ -99,7 +99,7 @@ C/C++ programming language. Team player, quick learner, open to new ideas and ex
     \item[ 2013-2017 : Mechatronics Technician] GPA(5.00/5.00)\hfill \\
     \textbf{\textit{Technical School, Leskovac}}\\
     \normalsize \\
-    Subjects stuied :
+    Subjects studied :
      \begin{multicols}{2}
     \begin{itemize}
     \item Mathematics
@@ -123,8 +123,7 @@ C/C++ programming language. Team player, quick learner, open to new ideas and ex
 
 \textbf{\large INTERESTS}\\
 \color{my_col}\noindent\rule{15.4cm}{0.6pt}\color{black}\\
-Algorithm and Data Structures, Computer Graphics, Database Systems, 
-C++ Programming, Artificial Intelligence, foregin languages and travel\\
+Algorithm and Data Structures, Computer Graphics, Artificial Intelligence, foregin languages and travel\\
 
 \textbf{\large PROJECTS}\\
 \color{my_col}\noindent\rule{15.4cm}{0.6pt}\color{black}
@@ -132,7 +131,7 @@ C++ Programming, Artificial Intelligence, foregin languages and travel\\
     \item[ C/OpenGL] - Shoot Training\\ 
     Game made in C program language and OpenGl(Open Graphics Library)
     \item[ HTML/NodeJS] - Web Library\\ 
-    Web page for online library powered by NodeJS
+    Web page for online book library powered by NodeJS
 \end{description}
 My projects can be seen on my Github profile \\
 %\textbf{\large REFRERENCIS}\\
@@ -140,7 +139,7 @@ My projects can be seen on my Github profile \\
 
 \color{my_col}\noindent\rule{15.4cm}{0.6pt}\color{black}
 \begin{flushright}
-	\small Belgrade, 31/12/2019
+	\small Belgrade, 10/01/2020
 \end{flushright}
 
 
