--- a/pm-cv.tex
+++ b/pm-cv.tex
@@ -5,12 +5,12 @@
 \usepackage{hyperref}
 \usepackage{multicol}
 
-\setlength{\textheight}{21cm}
-\setlength{\textwidth}{150mm}
-\setlength{\topmargin}{-2cm}
-\setlength{\evensidemargin}{13mm}
+\setlength{\textheight}{25cm}
+\setlength{\textwidth}{152mm}
+\setlength{\topmargin}{-2.5cm}
+\setlength{\evensidemargin}{12mm}
 \setlength{\oddsidemargin}{6mm}
-\definecolor{my_col}{RGB}{25,107,200}
+\definecolor{my_col}{RGB}{0,150,150}
 \pagenumbering{gobble}
 
 \sffamily
@@ -26,54 +26,86 @@
 	\includegraphics[width=0.25\textwidth]{my_pic.jpeg}
 \end{wrapfigure}
 
-\textbf{\large PERSONAL INFORMATIONS}\\
-\color{my_col}\noindent\rule{10cm}{0.8pt}\color{black}\\ \\
+\color{my_col}
+\textbf{\large PERSONAL INFORMATION}\\
+\noindent\rule{10cm}{1.5pt}\color{black}\\ \\
 Name:  \textbf{\emph{Predrag MITIC}} \\
-Address: \emph{Vlase bb, Leskovac, Serbia }\\
+Address: \emph{Bulevar Zorana Djindjica, Belgrade, Serbia }\\
 Tel: 	(+381) 61 18 56 816 \\
-Email	predrag98mitic@gmail.com \\ 
+E-mail1:	\textit{predrag98mitic@gmail.com} \\ 
+E-mail2:	\textit{pmitic@hotmail.com} \\ 
 Web:	\url{www.alas.matf.bg.ac.rs/~mi17116} \\
 Github:	\url{www.github.com/PredragMitic} \\ 
-Date of Birth: 1/09/1998 \\ \\
+LinkedIn: \url{www.linkedin.com/in/predrag-mitic-353019188}\\
+Date of Birth: September 1, 1998 \\ 
 
-\textbf{\large PERSONAL PROFILE}\\
-\color{my_col}\noindent\rule{15.4cm}{0.6pt}\color{black}\\ 
+\color{my_col}
+\textbf{\large PROFILE}\\
+\noindent\rule{15.4cm}{1.6pt}\color{black}\\ 
 Ambitious and highly motivated third year student at Faculty of Mathematics, 
 University of Belgrade. With practical experience in Computer Graphics and 
-C/C++ programming languages. Team player, quick learner, open to new ideas and experiences.\\
+C/C++ programming languages. Team player, quick learner, open to new ideas and experiences.\\ \\
+\textit{\textbf{English level: } B1+}\\
 
-\textbf{\large KEY SKILLS AND ACHIVEMENTS}\\
-\color{my_col}\noindent\rule{15.4cm}{0.6pt}\color{black}
+\color{my_col}
+\textbf{\large PROGRAMMING LANGUAGES}\\
+\noindent\rule{15.4cm}{1.6pt}\color{black}
 \normalsize
 \begin{itemize}
-  \item Good at solving algorithm problems
-  \item Extensive knowledge of programing and programming languages 
-  (C/C++, Java, Python, JavaScript, SQL, R, MATLAB)
-  \item Good knowledge of text markup languages (HTML/CSS, LaTeX)
-  \item Competent user of Microsoft Office, Autodesk softwre, 
-  Linux OS and Microsoft Windows OS
-  \item Excellent at 3D and 2D graphics 
-  \item Languages:
-	\begin{itemize}	\small
-		\item Serbian - Native
-		\item English - B1+
-		\item German - A1
-	\end{itemize}
+	\item\textbf{Good knowledge: 	} C/C++, Python3, Java
+	\item\textbf{Some experience:	} Haskell, Scala, R, JavaScript
+	\item\textbf{Frameworks used:} JavaFX, QT5\\
 \end{itemize}
+  
+\color{my_col}
+\textbf{\large COMPUTER SKILLS}\\
+\noindent\rule{15.4cm}{1.6pt}\color{black}
+\normalsize
+   \begin{multicols}{2}
+  	\begin{itemize}
+  		\item\textbf{OS: 	} Windows, GNU/Linux
+  		\item\textbf{Documents:} MS Office, Libre Office, \LaTeX
+  		\item\textbf{Markup Language: } HTML, CSS\\
+  		\item\textbf{Image editing: } Gimp
+  		\item\textbf{Editors :} Vim, JetBrains(CLion, PyCharm, Idea),
+  		Visual Studio (Code), Jupyter Notebook, Atom, Emacs\\
+ 
+  	\end{itemize}
+  \end{multicols}
 
+\color{my_col}
+\textbf{\large EMPLOYMENTS AND TRAINING}\\
+\noindent\rule{15.4cm}{1.6pt}\color{black}
 \begin{description}
-    \item[ 2016] - Fourth place in 3D Computer Grapics (Autodesk Inventor)\\
-    National Competition
-    \item[ 2016] - Second place in Electronics\\
-    National Competition
-    \item[ 2015] - First place in 2D Computer Grapics (Autodesk AutoCAD)\\
-    Regional Competition
-    \item[ 2014] - First place in 2D Computer Grapics (Autodesk AutoCAD)\\
-    National Competition
+	\item[ 2019] - RT-RK Summer School \\
+	\textit{Modern Improvements in C++}\\
 \end{description}
 
+\color{my_col}
+\textbf{\large PROJECTS}\\
+\noindent\rule{15.4cm}{1.6pt}\color{black}
+\begin{description}
+	\item[ C/OpenGL] - Shoot Training\\ 
+	Game made in C program language and OpenGl(Open Graphics Library)
+	\item[ HTML/NodeJS] - Web Library\\ 
+	Web page for online book library powered by NodeJS
+	\item[ Python3/Pygame] - Star Wars Space Battle\\ 
+	Game like Galaga made in pygame with Star Wars motives.\\
+	This game is built by team Jedi-MATF for course project.
+\end{description}
+My projects with other details can be seen on my GitHub profile \\
+
+\color{my_col}
+\textbf{\large SCIENTIFIC INTERESTS}\\
+\noindent\rule{15.4cm}{1.6pt}\color{black}\\\\
+- Algorithm and Data Structures\\
+- Data science \\
+- Computer Graphics and Game Development\\
+- Mobile App Development\\
+
+\color{my_col}
 \textbf{\large EDUCATION}\\
-\color{my_col}\noindent\rule{15.4cm}{0.6pt}\color{black}
+\noindent\rule{15.4cm}{1.6pt}\color{black}
 \begin{description}
     \item[ 2017-present : Bachelor of Informatics ]\hfill \\
     \textbf{\textit{Faculty of Mathematics, University of Belgrade}}\\
@@ -96,55 +128,38 @@ C/C++ programming languages. Team player, quick learner, open to new ideas and e
 \end{description}
 
 \begin{description}
-    \item[ 2013-2017 : Mechatronics Technician] GPA(5.00/5.00)\hfill \\
-    \textbf{\textit{Technical School, Leskovac}}\\
+    \item[ 2013-2017 : Mechatronics Technician]\hfill \\
+    \textbf{\textit{High School of Technology, Leskovac}}\\
     \normalsize \\
-    Subjects studied :
-     \begin{multicols}{2}
-    \begin{itemize}
-    \item Mathematics
-    \item Programming (C, C++, PLC)
-    \item Electrical engineering and Electronics
-    \item Mechanical engineering
-    \item Automatic Systems
-    \item English
-    \end{itemize}
-    \end{multicols}
+  
 \end{description}
+\color{my_col}
+\textbf{\large ACHIEVEMENTS}\\
+\noindent\rule{15.4cm}{1.6pt}\color{black}
+\normalsize
 
-
-\textbf{\large EMPLOYMENTS AND TRAININGS}\\
-\color{my_col}\noindent\rule{15.4cm}{0.6pt}\color{black}
 \begin{description}
-    \item[ 2019] - RT-RK Summer School \\
-    \textit{Modern Improvments in C++}
-   
+	\item[ 2016] - Fourth place in 3D Computer Graphics (Autodesk Inventor)\\
+	National Competition
+	\item[ 2016] - Second place in Electronics\\
+	National Competition
+	\item[ 2015] - First place in 2D Computer Graphics (Autodesk AutoCAD)\\
+	Regional Competition
+	\item[ 2014] - First place in 2D Computer Graphics (Autodesk AutoCAD)\\
+	National Competition
 \end{description}
 
-\textbf{\large INTERESTS}\\
-\color{my_col}\noindent\rule{15.4cm}{0.6pt}\color{black}\\
-Algorithm and Data Structures, Computer Graphics, Artificial Intelligence, foregin languages and travel\\
+\color{my_col}
+\textbf{\large FREE TIME }\\
+\noindent\rule{15.4cm}{1.6pt}\color{black}\\\\
+- Travel and Languages\\
+- Sport (Basketball, Football, Tennis) \\
+- Art (Movies, Music, Books)\\
+- Geography\\
 
-\textbf{\large PROJECTS}\\
-\color{my_col}\noindent\rule{15.4cm}{0.6pt}\color{black}
-\begin{description}
-    \item[ C/OpenGL] - Shoot Training\\ 
-    Game made in C program language and OpenGl(Open Graphics Library)
-    \item[ HTML/NodeJS] - Web Library\\ 
-    Web page for online book library powered by NodeJS
-\end{description}
-My projects can be seen on my Github profile \\
-%\textbf{\large REFRERENCIS}\\
-%\color{my_col}\noindent\rule{15.4cm}{0.6pt}\color{black}\\ 
-
-\color{my_col}\noindent\rule{15.4cm}{0.6pt}\color{black}
+\color{my_col}\noindent\rule{15.4cm}{1.6pt}\color{black}
 \begin{flushright}
-	\small Belgrade, 10/01/2020
+	\small Belgrade, June 4, 2020
 \end{flushright}
-
-
-
-
-
 
 \end{document}
