--- a/pm-cv.tex
+++ b/pm-cv.tex
@@ -30,7 +30,7 @@
 \textbf{\large PERSONAL INFORMATION}\\
 \noindent\rule{10cm}{1.5pt}\color{black}\\ \\
 Name:  \textbf{\emph{Predrag MITIC}} \\
-Address: \emph{Bulevar Zorana Djindjica, Belgrade, Serbia }\\
+Address: \emph{Pariske komune, Belgrade, Serbia }\\
 Tel: 	(+381) 61 18 56 816 \\
 E-mail1:	\textit{predrag98mitic@gmail.com} \\ 
 E-mail2:	\textit{pmitic@hotmail.com} \\ 
@@ -45,7 +45,7 @@ Date of Birth: September 1, 1998 \\
 Ambitious and highly motivated third year student at Faculty of Mathematics, 
 University of Belgrade. With practical experience in Computer Graphics and 
 C/C++ programming languages. Team player, quick learner, open to new ideas and experiences.\\ \\
-\textit{\textbf{English level: } B1+}\\
+\textit{\textbf{English level: } B2}\\
 
 \color{my_col}
 \textbf{\large PROGRAMMING LANGUAGES}\\
@@ -53,7 +53,7 @@ C/C++ programming languages. Team player, quick learner, open to new ideas and e
 \normalsize
 \begin{itemize}
 	\item\textbf{Good knowledge: 	} C/C++, Python3, Java
-	\item\textbf{Some experience:	} Haskell, Scala, R, JavaScript
+	\item\textbf{Some experience:	} Haskell, Scala, R, JavaScript (TypeScript)
 	\item\textbf{Frameworks used:} JavaFX, QT5\\
 \end{itemize}
   
@@ -65,10 +65,10 @@ C/C++ programming languages. Team player, quick learner, open to new ideas and e
   	\begin{itemize}
   		\item\textbf{OS: 	} Windows, GNU/Linux
   		\item\textbf{Documents:} MS Office, Libre Office, \LaTeX
-  		\item\textbf{Markup Language: } HTML, CSS\\
+  		\item\textbf{Markup Language: } HTML, CSS, Markdown\\
   		\item\textbf{Image editing: } Gimp
   		\item\textbf{Editors :} Vim, JetBrains(CLion, PyCharm, Idea),
-  		Visual Studio (Code), Jupyter Notebook, Atom, Emacs\\
+  		Visual Studio (Code), Jupyter Notebook, Atom\\
  
   	\end{itemize}
   \end{multicols}
@@ -79,6 +79,10 @@ C/C++ programming languages. Team player, quick learner, open to new ideas and e
 \begin{description}
 	\item[ 2019] - RT-RK Summer School \\
 	\textit{Modern Improvements in C++}\\
+	\item[ 2020 - 2021] - Finbet Internship \\
+	\textit{Fullstack game developer}\\
+	\item[ 2021 - present ] - Finbet \\
+	\textit{Frontend game developer}\\
 \end{description}
 
 \color{my_col}
@@ -153,7 +157,7 @@ My projects with other details can be seen on my GitHub profile \\
 \textbf{\large FREE TIME }\\
 \noindent\rule{15.4cm}{1.6pt}\color{black}\\\\
 - Travel and Languages\\
-- Sport (Basketball, Football, Tennis) \\
+- Sport (Basketball, Swimming, Bodybuilding) \\
 - Art (Movies, Music, Books)\\
 - Geography\\
 
