--- a/pm-cv.tex
+++ b/pm-cv.tex
@@ -30,7 +30,7 @@
 \textbf{\large PERSONAL INFORMATION}\\
 \noindent\rule{10cm}{1.5pt}\color{black}\\ \\
 Name:  \textbf{\emph{Predrag MITIC}} \\
-Address: \emph{Pariske komune, Belgrade, Serbia }\\
+Address: \emph{Antifasiticke borbe, Belgrade, Serbia }\\
 Tel: 	(+381) 61 18 56 816 \\
 E-mail1:	\textit{predrag98mitic@gmail.com} \\ 
 E-mail2:	\textit{pmitic@hotmail.com} \\ 
@@ -42,9 +42,8 @@ Date of Birth: September 1, 1998 \\
 \color{my_col}
 \textbf{\large PROFILE}\\
 \noindent\rule{15.4cm}{1.6pt}\color{black}\\ 
-Ambitious and highly motivated third year student at Faculty of Mathematics, 
-University of Belgrade. With practical experience in Computer Graphics and 
-C/C++ programming languages. Team player, quick learner, open to new ideas and experiences.\\ \\
+Ambitious and highly motivated Game Developer, with 3 years experience in developing Web Games for gambling industry. Skilled in games architecture, optimizing game performances and game quality improvement in general. Proven ability to manage project development and timelines. 
+Team player, quick learner, open to new ideas and experiences.\\ \\
 \textit{\textbf{English level: } B2}\\
 
 \color{my_col}
@@ -52,9 +51,9 @@ C/C++ programming languages. Team player, quick learner, open to new ideas and e
 \noindent\rule{15.4cm}{1.6pt}\color{black}
 \normalsize
 \begin{itemize}
-	\item\textbf{Good knowledge: 	} C/C++, Python3, Java
-	\item\textbf{Some experience:	} Haskell, Scala, R, JavaScript (TypeScript)
-	\item\textbf{Frameworks used:} JavaFX, QT5\\
+	\item\textbf{Good knowledge: 	} Typescript, Python3, C/CPP
+	\item\textbf{Some experience:	} Haskell, Scala, R, Java
+	\item\textbf{Frameworks used:} PixiJS, AnimeJS, QT5\\
 \end{itemize}
   
 \color{my_col}
@@ -67,8 +66,7 @@ C/C++ programming languages. Team player, quick learner, open to new ideas and e
   		\item\textbf{Documents:} MS Office, Libre Office, \LaTeX
   		\item\textbf{Markup Language: } HTML, CSS, Markdown\\
   		\item\textbf{Image editing: } Gimp
-  		\item\textbf{Editors :} Vim, JetBrains(CLion, PyCharm, Idea),
-  		Visual Studio (Code), Jupyter Notebook, Atom\\
+  		\item\textbf{Editors :} Visual Studio (Code), Vim, JetBrains(CLion, PyCharm, Idea), Jupyter Notebook, Atom\\
  
   	\end{itemize}
   \end{multicols}
@@ -79,20 +77,18 @@ C/C++ programming languages. Team player, quick learner, open to new ideas and e
 \begin{description}
 	\item[ 2019] - RT-RK Summer School \\
 	\textit{Modern Improvements in C++}\\
-	\item[ 2020 - 2021] - Finbet Internship \\
-	\textit{Fullstack game developer}\\
-	\item[ 2021 - present ] - Finbet \\
-	\textit{Frontend game developer}\\
+	\item[ 2020 - 2021] - Finbet - Full Stack Game Development Internship\\
+	\textit{Worked on online multiplayer game development. Developed both frontend and backend app sides, so communication between this two side was implemented on socket systems. Client application is developed in Javascript within following frameworks PixiJS and AnimeJS. Backend side was a node application.}\\
+	\item[ 2021 - present ] - Finbet - Frontend Game Developer \\
+	\textit{Joined a team that prioritizes a variety of projects, with games taking the top spot. We have been working on developing in-house engine and editor that made the process easier and better. PixiJS is the main framework, around which we made the engine. Editor is made in HTML/CSS without any frameworks.}\\
 \end{description}
 
 \color{my_col}
-\textbf{\large PROJECTS}\\
+\textbf{\large FACULTY PROJECTS}\\
 \noindent\rule{15.4cm}{1.6pt}\color{black}
 \begin{description}
 	\item[ C/OpenGL] - Shoot Training\\ 
 	Game made in C program language and OpenGl(Open Graphics Library)
-	\item[ HTML/NodeJS] - Web Library\\ 
-	Web page for online book library powered by NodeJS
 	\item[ Python3/Pygame] - Star Wars Space Battle\\ 
 	Game like Galaga made in pygame with Star Wars motives.\\
 	This game is built by team Jedi-MATF for course project.
@@ -103,7 +99,7 @@ My projects with other details can be seen on my GitHub profile \\
 \textbf{\large SCIENTIFIC INTERESTS}\\
 \noindent\rule{15.4cm}{1.6pt}\color{black}\\\\
 - Algorithm and Data Structures\\
-- Data science \\
+- Computer vision \\
 - Computer Graphics and Game Development\\
 - Mobile App Development\\
 
@@ -113,22 +109,6 @@ My projects with other details can be seen on my GitHub profile \\
 \begin{description}
     \item[ 2017-present : Bachelor of Informatics ]\hfill \\
     \textbf{\textit{Faculty of Mathematics, University of Belgrade}}\\
-    \normalsize \\
-    Subjects studied :
-     \begin{multicols}{2}
-    \begin{itemize}
-    \item Programming
-    \item Computer Architecture
-    \item Algorithms and Data structures
-    \item Operating Systems
-    \item Database Systems
-    \item Web programming
-    \item Geometry
-    \item Numerical Mathematics
-    \item Probability and Statistics 
-    \item English
-    \end{itemize}
-    \end{multicols}
 \end{description}
 
 \begin{description}
@@ -163,7 +143,7 @@ My projects with other details can be seen on my GitHub profile \\
 
 \color{my_col}\noindent\rule{15.4cm}{1.6pt}\color{black}
 \begin{flushright}
-	\small Belgrade, June 4, 2020
+	\small Belgrade, May 2024.
 \end{flushright}
 
 \end{document}
